Fix-Feat: correccion de reporte y consumo por centro de trabajo, nueva opcion para actualizar cantidades a ejecutar desde costos, paso a produccion