@@ -65,22 +65,29 @@ public class ConectorConsumoServiceImpl implements ConectorConsumoService {
 		mov.setF470_nro_registro(data.getf851_rowid());//data.getf851_rowid()revisar Rowid item padre, item de la op de etrega o hijo 851
 		mov.setF470_id_item_padre(data.getf120_id());//revisar id item padre, item de la op de etrega o hijo 120
 		if(itemReporteDTO == null) {
-			//codErpMateriaPrima = solicitudMateriaPrimaService.obtenerCodErpPorLote(reporte.getLote());
 			mov.setF470_id_item_comp(codErpMateriaPrima);//revisar id item lista materiales **************************			
 			BigDecimal cantConsumir = itemFab.getitem_peso_b().multiply(new BigDecimal(reporte.getCantReportar()));
 			mov.setF470_cant_base(cantConsumir.doubleValue());
 		}else {
 			mov.setF470_id_item_comp(itemReporteDTO.getId());
 			mov.setF470_cant_base(itemReporteDTO.getCant());
+			mov.setF470_notas("Creado desde Guayacan, consumo de para: " + itemFab.getitem_desc() + " Cant: " + itemReporteDTO.getCant() + " und(s)." );
 		}
-		if(mov.getF470_id_lote().isBlank()) mov.setF470_id_lote(reporte.getLote());//revisar item lista materiales			
+		if(mov.getF470_id_lote().isBlank()) {
+			String loteReporte = reporte.getLote();
+			if (mov.getF470_id_lote().isBlank() && 
+			    loteReporte != null && 
+			    !loteReporte.trim().isEmpty()) {
+			    mov.setF470_id_lote(loteReporte);
+			}			
+		}
 		mov.setF470_id_bodega(configService.getBODEGA_ENTREGA_TRANSFERENCIA());//revisar		
 		mov.setF470_id_concepto(701);
 		mov.setF470_id_motivo(configService.getMOTIVO_CONSUMO());
 		mov.setF470_id_co_movto(configService.getC_O());
 		mov.setF470_id_un_movto("001");
 		mov.setF470_id_unidad_medida(data.getf120_id_unidad_inventario());
-		mov.setF470_notas("Creado desde Guayacan, reporte de " + itemReporteDTO.getCant() + "piezas de " + itemFab.getitem_desc());
+		mov.setF470_notas("Creado desde Guayacan, consumo de para: " + itemFab.getitem_desc() + " Cant: " + reporte.getCantReportar() + " und(s)." );	
 				
 		movs.add(mov);
 		
